Bug 15740 - gss_accept_sec_context() from Heimdal does not imply GSS_C_MUTUAL_FLAG with GSS_C_DCE_STYLE
Summary: gss_accept_sec_context() from Heimdal does not imply GSS_C_MUTUAL_FLAG with G...
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: AD: LDB/DSDB/SAMDB (show other bugs)
Version: 4.21.1
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-10-16 12:39 UTC by Stefan Metzmacher
Modified: 2024-11-25 15:11 UTC (History)
2 users (show)

See Also:


Attachments
Patch for v4-21-test (1.79 KB, text/plain)
2024-10-29 08:05 UTC, Stefan Metzmacher
slow: review+
Details
Patch for v4-20-test (1.79 KB, text/plain)
2024-10-29 08:05 UTC, Stefan Metzmacher
slow: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Metzmacher 2024-10-16 12:39:08 UTC
Windows forgets to add GSS_C_MUTUAL_FLAG in some situations, when using GSS_C_DCE_STYLE for DCERPC based kerberos authentication.
Comment 1 Samba QA Contact 2024-10-16 19:06:04 UTC
This bug was referenced in samba master:

ce10b28566eb7b3e26a1e404b278d3d761ac183e
Comment 2 Stefan Metzmacher 2024-10-29 08:05:00 UTC
Created attachment 18485 [details]
Patch for v4-21-test
Comment 3 Stefan Metzmacher 2024-10-29 08:05:31 UTC
Created attachment 18486 [details]
Patch for v4-20-test
Comment 4 Ralph Böhme 2024-10-29 10:08:02 UTC
Reassigning to jule for inclusion in 4.20 and 4.21.
Comment 5 Jule Anger 2024-11-07 08:33:55 UTC
Pushed to autobuild-v4-{21,20}-test.
Comment 6 Samba QA Contact 2024-11-07 09:22:20 UTC
This bug was referenced in samba v4-20-test:

81f92c8a62f49de727308ed6d334f6a247ca5143
Comment 7 Samba QA Contact 2024-11-07 10:28:20 UTC
This bug was referenced in samba v4-21-test:

00e1c97fee9cc197c34967d9099fec03f75658e0
Comment 8 Jule Anger 2024-11-07 10:38:23 UTC
Closing out bug report.

Thanks!
Comment 9 Samba QA Contact 2024-11-19 14:48:11 UTC
This bug was referenced in samba v4-20-stable (Release samba-4.20.6):

81f92c8a62f49de727308ed6d334f6a247ca5143
Comment 10 Samba QA Contact 2024-11-25 15:11:15 UTC
This bug was referenced in samba v4-21-stable (Release samba-4.21.2):

00e1c97fee9cc197c34967d9099fec03f75658e0